--- a/calendar/app/src/main/res/layout/activity_detail_calendar.xml
+++ b/calendar/app/src/main/res/layout/activity_detail_calendar.xml
@@ -9,7 +9,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/gray_btn_bg_color" />
+        android:background="@color/lineGray" />
 
 
     <LinearLayout
@@ -20,7 +20,6 @@
         android:orientation="horizontal">
 
         <TextView
-            android:textStyle="bold"
             android:gravity="center_horizontal"
             android:layout_width="0dp"
             android:layout_weight="2"
@@ -31,7 +30,6 @@
 
 
         <TextView
-            android:textStyle="bold"
             android:gravity="center_horizontal"
             android:layout_width="0dp"
             android:layout_weight="2"
@@ -41,7 +39,6 @@
             android:textColor="@color/black"/>
 
         <TextView
-            android:textStyle="bold"
             android:gravity="center_horizontal"
             android:layout_width="0dp"
             android:layout_weight="2"
@@ -50,7 +47,6 @@
             android:textSize="13.5dp"
             android:textColor="@color/black"/>
         <TextView
-            android:textStyle="bold"
             android:gravity="center_horizontal"
             android:layout_width="0dp"
             android:layout_weight="2"
@@ -60,7 +56,6 @@
             android:textColor="@color/black"/>
 
         <TextView
-            android:textStyle="bold"
             android:gravity="center_horizontal"
             android:layout_width="0dp"
             android:layout_weight="2"
@@ -70,7 +65,6 @@
             android:textColor="@color/black"/>
 
         <TextView
-            android:textStyle="bold"
             android:gravity="center_horizontal"
             android:layout_width="0dp"
             android:layout_weight="2"
@@ -80,7 +74,6 @@
             android:textColor="@color/black"/>
 
         <TextView
-            android:textStyle="bold"
             android:gravity="center_horizontal"
             android:layout_width="0dp"
             android:layout_weight="2"
@@ -94,7 +87,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/gray_btn_bg_color" />
+        android:background="@color/lineGray" />
 
     <ListView
         android:divider="@null"
