--- a/calendar/app/src/main/res/layout/item_calendar_day.xml
+++ b/calendar/app/src/main/res/layout/item_calendar_day.xml
@@ -9,7 +9,7 @@
 
 
     <View
-        android:background="@color/gray_btn_bg_color"
+        android:background="@color/lineGray"
         android:layout_width="match_parent"
         android:layout_height="0.5dp" />
 
@@ -17,9 +17,8 @@
         android:background="@mipmap/bg_calendar_normal"
         android:id="@+id/tv_calendar_day"
         android:gravity="center"
-        android:textStyle="bold"
         android:layout_marginTop="12sp"
-        android:textColor="@color/blue"
+        android:textColor="@color/black"
         android:textSize="17sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
