--- a/calendar/app/src/main/res/layout/item_calendar_day.xml
+++ b/calendar/app/src/main/res/layout/item_calendar_day.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ll"
-    android:visibility="visible"
-    android:gravity="center_horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+              android:id="@+id/ll"
+              android:visibility="visible"
+              android:gravity="center_horizontal"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
 
 
-    <View
-        android:background="@color/lineGray"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp" />
+
 
     <TextView
         android:background="@mipmap/bg_calendar_normal"
         android:id="@+id/tv_calendar_day"
         android:gravity="center"
-        android:layout_marginTop="12sp"
+        android:layout_marginTop="1dp"
         android:textColor="@color/black"
         android:textSize="17sp"
         android:layout_width="wrap_content"
@@ -26,6 +23,7 @@
 
     <TextView
         android:id="@+id/tv_calendar_investment_value"
+        android:visibility="gone"
         android:layout_marginTop="12.5dp"
         android:layout_marginBottom="11dp"
         android:layout_width="wrap_content"
@@ -33,5 +31,9 @@
         android:textColor="@color/orange"
         android:singleLine="true"
         android:textSize="11sp" />
+    <View
+        android:background="@color/color_ED"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp" />
 
 </LinearLayout>
